Interfaz principal creada en la cual se muestra la lista de los contactos

--- a/src/main/webapp/VAADIN/themes/mytheme/styles.scss
+++ b/src/main/webapp/VAADIN/themes/mytheme/styles.scss
@@ -9,3 +9,15 @@
   @include mytheme;
 
 }
+
+.contacts-grid {
+	.v-grid-header {
+		color: white;
+		.v-grid-cell {
+			background-color: #33AFFF;
+			background-image: none;
+			border-right: none;
+			border-left: none;
+		}
+	}
+}
