Se ha modificado la cabecera de la página y el layout principal

--- a/src/main/webapp/VAADIN/themes/mytheme/styles.css
+++ b/src/main/webapp/VAADIN/themes/mytheme/styles.css
@@ -15076,6 +15076,14 @@ div.v-layout.v-horizontal.v-widget {
 	overflow: hidden;
 }
 
+.header {
+	width: 100%;
+}
+
+.header .v-slot-create-btn {
+	float: right;
+}
+
 .contacts-grid .v-grid-header {
 	color: white;
 }
