--- a/src/main/webapp/VAADIN/themes/mytheme/styles.scss
+++ b/src/main/webapp/VAADIN/themes/mytheme/styles.scss
@@ -10,22 +10,56 @@
 
 }
 
+.v-slot-header {
+	height: 40px !important;
+}
+
 .header {
 	width: 100%;
+
+	.title {
+		font-size: 25px;
+		font-weight: bold;
+	}
 	
 	.v-slot-create-btn {
 		float: right;
 	}
 }
 
+.v-slot-contacts-grid {
+	height: 95% !important;
+
+	.contacts-grid {
+		height: 100% !important;
+	}
+}
+
 .contacts-grid {
 	.v-grid-header {
 		color: white;
+		font-weight: bold;
 		.v-grid-cell {
-			background-color: #33AFFF;
+			background-color: #3b5998;
 			background-image: none;
 			border-right: none;
 			border-left: none;
+
+			
 		}
 	}
+
+	.edit-btn, .del-btn {
+		height: 28px !important;
+		padding: 0 10px !important;
+	}
+}
+
+
+.form {
+	width: 400px !important;
+	.v-gridlayout-slot {
+		margin-left: 12px;
+	}
+
 }
